welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: illegal start of simple expression
  } else var a = 0
         ^