welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (isBirthday) {
    var a = 5
  } else var a = 0
  if (speed<=60+a) {
    return 0
  } else if (speed<=80+a) {
           return 1
         } else return 2
}